gzip flask api responses

--- a/client/partials/country.html
+++ b/client/partials/country.html
@@ -278,7 +278,7 @@
   </div>
     
   <div class="row">
-    <div class="col-sm-12">
+    <div class="col-sm-12 collapse" id="collapseExample">
       <linechart-world ng-data="linechartData">
       </linechart-world>
     </div>
