download csv OK on firefox and chrome

--- a/client/partials/bilateral.html
+++ b/client/partials/bilateral.html
@@ -146,7 +146,7 @@
           Show/Hide data table
       </button>
       <button type="button" ng-click="download()" class="btn">
-          Download data
+          Download data of entities selected
       </button>
     </div>
   </div>
