--- a/client/partials/navbar.html
+++ b/client/partials/navbar.html
@@ -20,7 +20,7 @@
             <li>
               <a class="translateButtons" ng-click="changeLanguage('en')">En</a>
             </li>
-            <!-- <li><a href="#/about">About</a></li> -->
+            <li><a href="#/about">About</a></li>
       </ul>
     </div>
   </div>
