update country controller api call without sources

--- a/client/partials/country.html
+++ b/client/partials/country.html
@@ -299,7 +299,7 @@
 </div>
   <div class="row">
     <div class="col-sm-12 text-center shdt">
-      <button type="button" class="btn" ng-model="viewTable" btn-checkbox btn-checkbox-true="1" btn-checkbox-false="0">
+      <button type="button" class="btn" ng-model="viewTable" btn-checkbox btn-checkbox-true="1" btn-checkbox-false="0" ng-click="takeData()">
           Show/Hide data table
       </button>
       <button type="button" ng-click="download()" class="btn">
