--- a/client/partials/world.html
+++ b/client/partials/world.html
@@ -36,10 +36,8 @@
         <h4>Number of reporting entities in estimating World trade</h4>
         <bar-chart 
           ng-data="nbReportings"
-          start-date="selectedMinDate"
-          end-date="selectedMaxDate"
-          raw-start-date="rawMinDate"
-          raw-end-date="rawMaxDate"
+          start-date="barMinDate"
+          end-date="barMaxDate"
           ></bar-chart>
         <div class="legend">
           <div class="legend-item">
